--- a/prj.conf
+++ b/prj.conf
@@ -19,14 +19,30 @@ CONFIG_UART_LINE_CTRL=y
 # C++ Support
 CONFIG_CPP=y
 CONFIG_NEWLIB_LIBC=y
-CONFIG_CPLUSPLUS=y
-CONFIG_LIB_CPLUSPLUS=y
 
 # Networking (for Matter/Thread)
 CONFIG_NETWORKING=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
+CONFIG_NET_L2_OPENTHREAD=y
+
+# Use HDLC RCP interface (host mode) for OpenThread
+CONFIG_HDLC_RCP_IF=y
+CONFIG_HDLC_RCP_IF_UART=y
+CONFIG_OPENTHREAD_HDLC_RCP_IF_UART_RX_RING_BUFFER_SIZE=1024
+CONFIG_OPENTHREAD_HDLC_RCP_IF_UART_TX_RING_BUFFER_SIZE=1024
+
+# Basic OpenThread settings for quick bring-up
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_IEEE802154_CHANNEL=26
+CONFIG_NET_CONFIG_IEEE802154_PAN_ID=0x1234
+
+# Optional: OT shell for debugging
+# Uncomment if you want CLI at the Zephyr shell
+# CONFIG_SHELL=y
+# CONFIG_NET_SHELL=y
+# CONFIG_OPENTHREAD_SHELL=y
 
 # Thread Configuration (for Matter)
 # TODO: Enable when Matter SDK is integrated
@@ -43,6 +59,7 @@ CONFIG_NET_TCP=y
 # Flash and Storage (for Matter credentials)
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
@@ -53,7 +70,6 @@ CONFIG_ISR_STACK_SIZE=2048
 
 # Debugging
 CONFIG_DEBUG=y
-CONFIG_DEBUG_INFO=y
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_MONITOR=y
 
