--- a/prj.conf
+++ b/prj.conf
@@ -11,6 +11,13 @@ CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 
+CONFIG_LOG_MAX_LEVEL=1
+CONFIG_LOG_MODE_MINIMAL=n
+CONFIG_LOG_BACKEND_SPINEL=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_BOOT_BANNER=n
+
 # Serial/UART Configuration for CN105
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
@@ -27,6 +34,10 @@ CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
 CONFIG_NET_L2_OPENTHREAD=y
 
+# Disable certain parts of Zephyr IPv6 stack
+CONFIG_NET_IPV6_NBR_CACHE=n
+CONFIG_NET_IPV6_MLD=n
+
 # Use HDLC RCP interface (host mode) for OpenThread
 CONFIG_HDLC_RCP_IF=y
 CONFIG_HDLC_RCP_IF_UART=y
@@ -37,6 +48,7 @@ CONFIG_OPENTHREAD_HDLC_RCP_IF_UART_TX_RING_BUFFER_SIZE=1024
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_IEEE802154_CHANNEL=26
 CONFIG_NET_CONFIG_IEEE802154_PAN_ID=0x1234
+
 
 # Optional: OT shell for debugging
 # Uncomment if you want CLI at the Zephyr shell
